Changelog
=========

10.6-dev0 - (unreleased)
---------------------

10.5 - (2018-08-31)
---------------------
* Feature: Add EEA 39 to country groups in geo tagging interface
  [avoinea refs #87954]

10.4 - (2018-07-27)
---------------------
* Bug fix: The id "++resource++eea.geotags.static" contains characters illegal in URLs.
  [avoinea refs #97380]

10.3 - (2018-07-11)
---------------------
* Cleanup: Remove Products.ATVocabularyManager dependency
  [avoinea refs #97067]
* Change: Added missing country groups (EU33, EU28, etc.)
  [avoinea refs #97067]

10.2 - (2018-07-11)
---------------------
* Bug fix: Fixed Mixed Content by loading openlayers API over https
  [avoinea refs #96619]

10.1 - (2018-07-10)
---------------------
* Bug fix: Fixed Mixed Content by loading openlayers API over https
  [avoinea refs #96619]

10.0 - (2018-07-04)
-------------------
* Upgrade step: "Plone > Site setup > Add-ons" upgrade eea.geotags
  [avoinea refs #95147]
* Upgrade step: "Plone > Site setup > EEA Geotags Settings" add/remove Google Maps API key and Geonames username
  [avoinea refs #95147]
* Change: Fallback to Open Street Map if no Google API Key provided
  [avoinea refs #95147]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

9.3 - (2018-03-14)
------------------
* Change: fixed issues reported for assessment edit pages
  [ichim-david refs #91590]
* Change: added jQuery clicktoggle method as toggle is deprecated
  [ichim-david refs #91577]
* Change: removed jQuery.browser usage as we no longer support IE 8
  [ichim-david refs #91577]

9.2 - (2017-12-21)
------------------
* Bug fix: fixed the geotags upgrade script
  [irina-botez refs #90606]

9.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

9.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

8.9 - (2017-09-11)
------------------