@@ -1,88 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:tal="http://xml.zope.org/namespaces/tal"
-  xmlns:metal="http://xml.zope.org/namespaces/metal"
-  xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-  i18n:domain="eea">
-    <div>
-    <!--div tal:define="widget view/geowidget"-->
-    <div tal:define="widget nocall:view; here python:widget.context.context.context; fieldName python:'location'">
-    <!--div metal:use-macro="context/eea.geotags/macros/location" /-->
-
-  <div metal:define-macro="location" tal:define="
-    base_url python: request.URL1.split('portal_factory')[0] if 'portal_factory' in request.URL1 else '';
-    dialog python:base_url + widget.dialog;
-    sidebar python:base_url + widget.sidebar;
-    basket python:base_url + widget.basket;
-    json python:base_url + widget.json;
-    suggestions python:base_url + widget.suggestions;
-    multiline python:widget.context.multiline and 1 or 0;
-    geojson python:widget.context.getJSON(here)">
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
-    <div tal:define="label python:''"
-    tal:attributes="
-      id fieldName;
-      title string:Edit $label"></div>
-    <textarea tal:attributes="name fieldName" style="display: none" rows="10"
-      tal:content="geojson"></textarea>
-    <div tal:attributes="id string:$fieldName-geopreview"></div>
-    <input type="button" name="edit" i18n:attributes="value" value="Edit"
-    tal:attributes="id string:$fieldName-edit; class string:standardButton" />
-    <script type="text/javascript" tal:content="string:
-      (function(){
-      var name = 'location';
-        var name = '$fieldName';
-        var basket = '$basket';
-        var sidebar = '$sidebar';
-        var dialog = '$dialog';
-        var json = '$json';
-        var multiline = $multiline;
-        var suggestions = '$suggestions';
-
-        var settings = {
-          template: dialog,
-          sidebar: {
-            json: json,
-            template: sidebar,
-            suggestions: suggestions,
-            fieldName: name
-          },
-          map: {
-            json: json,
-            fieldName: name
-          },
-          basket: {
-            json: json,
-            template: basket,
-            fieldName: name,
-            multiline: multiline
-          }
-        };
-
-        var geojson = $geojson;
-        if(geojson.features){
-          settings.basket.geojson = geojson;
-        }
-
-        // Initialize popup
-        jQuery(document).ready(function(){
-          var geo = jQuery('#' + name).geodialog(settings);
-          jQuery('#' + name + '-edit').click(function(){
-            geo.dialog('open');
-          });
-        });
-
-        // Display map
-        jQuery(document).ready(function(){
-          jQuery('#' + name + '-geopreview').geopreview({
-            fieldName: name,
-            json: geojson
-          });
-        });
-      })();
-    "></script>
-  </div>
-
-
-	</div>
-    </div>
-</html>
